--- a/scss/components/_search-box.scss
+++ b/scss/components/_search-box.scss
@@ -1,40 +1,39 @@
 .container {
-  // @include size(100%);
-  // background-color: #666;
-  // display: flex;
-  // justify-content: space-around;
-  // flex-direction: column;
-
+  @include size(100%);
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;;
 
   h1{
-    // color: white;
-    // text-shadow: 1px 1px 1px black;
-    // text-align: center;
-    // font-size: 60px;
+    font-size: 100px;
+    text-align: center;
+    letter-spacing: 10px;
+    transform: skewX(-45deg);
+    margin-top: 50px;
   }
   form {
-    // display: flex;
-    // justify-content: space-around;
-    // flex-direction: column;
-    label {
-      // color: white;
-      // text-shadow: 1px 1px 1px black;
-      // text-align: center;
-      // font-size: 60px;
-    }
+    margin-top: 50px;
+    display: flex;
+    flex-direction: column;
+
     input {
-      // font-size: 60px;
-      // text-align: center;
-      // height: 100px;
+      margin-top: 50px;
+      margin: 0 auto;
+      font-size: 80px;
+      @include size(80%, 200px);
+      transform: skewX(45deg);
+      box-shadow: inset 10px 10px 30px lime, 10px 10px 30px #f725c9;
+
     }
     button {
-      // font-size: 40px;
-      // padding: 20px;
-      // background-color: black;
-      // color: white;
-      // cursor: pointer;
+      margin-top: 40px;
+      padding: 20px;
+      transform: skewX(-45deg);
     }
   }
   .output {
+    margin-top: 50px;
+    @include size(100%, 100px);
+    text-align: center;
   }
 }
